SERVER-29066 Implicitly create the database in findAndModify